# aem-modbus-simulator

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  aem_60dc8_slave.py  pyproject.toml
.github/workflows/: test.yml
examples/: automotive_24v.py  solar_strings.py  telecom_48v_bank.py
tests/: test_register_map.py
